# polyglottal-backend

./: Procfile  README.md  pyproject.toml
polyglottal_backend/: main.py  practice.py
polyglottal_backend/config/: database.py
polyglottal_backend/models/: messages.py
polyglottal_backend/routes/: route.py
polyglottal_backend/schema/: schemas.py
