[tool.poetry]
name = "polyglottal_backend"
version = "0.1.0"
description = ""
authors = ["hono1030 <honoka.n1030@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "polyglottal_backend.main:start"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
